--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.7.2/css/all.css">
-        <link rel="stylesheet" href="/css/styles.css">
-        <title>Title</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="moon.png">
+        <meta name="description" content="Moon Client | An Upcoming all in one mod pack for free, with a launcher">
+        <title>Moon Client</title>
     </head>
     <body>
         <div class="top-nav">
