--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="links">
                 <a class="linkText" href="#downloads">ᴅᴏᴡɴʟᴏᴀᴅ</a>
                 <a class="linkText" href="#versions">ᴠᴇʀꜱɪᴏɴꜱ</a>
-                <a class="linkText">ᴅɪꜱᴄᴏʀᴅ</a>
+                <a class="linkText" href="https://discord.com/invite/gmvS9NEuEn" >ᴅɪꜱᴄᴏʀᴅ</a>
             </div>
         </div>
         <br>
