--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <br>
         <hr />
-        <div class="versions" Id="versions">
+        <div Id="versions">
             <br>
             <br>
             <center>
@@ -84,7 +84,7 @@
                 <p>Moon Client will support Fabric and Forge with Minecraft versions 1.8.9 and latest versions of the game</p>
             </center>
         </div>
-        <div class="downloads" Id="downloads">
+        <div Id="downloads">
             <br>
             <center>
                 <h1>Downloads</h1>
