--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
             <p class="mod">Block Overlay</p>
             <p class="mod">Debug</p>
             <p class="mod">No Rain</p>
+            <p class="mod">Macros</p>
+        </div>
+        <div class="mods3">
+            
         </div>
         <br>
         <hr />
