Added more mods

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--COPYRIGHT of 2025, made by MoonClient. 
+Do not use this repository to create you're own website. 
+This is only public for github pages.-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -76,7 +80,9 @@
             <p class="mod">Macros</p>
         </div>
         <div class="mods3">
-            
+            <p class="mod">Themes</p>
+            <p class="mod">Chat Notifications</p>
+            <p class="mod">Health Indicator</p>
         </div>
         <br>
         <hr />
