Added the main index back to main dir

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ This is only public for github pages.-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.7.2/css/all.css">
-        <link rel="stylesheet" href="/website/styles.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="moon.png">
         <meta name="description" content="Moon Client | An Upcoming all in one mod pack for free, with a launcher">
         <title>Moon Client</title>
