Gave a modern background

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ This is only public for github pages.-->
                 <h1 class="title" >Moon Client</h1>
             </div>
             <div class="links">
+                <a class="linkText" href="#meteorPlus">ᴍᴇᴀᴛᴏʀ+</a>
                 <a class="linkText" href="#downloads">ᴅᴏᴡɴʟᴏᴀᴅ</a>
                 <a class="linkText" href="#versions">ᴠᴇʀꜱɪᴏɴꜱ</a>
                 <a class="linkText" href="https://discord.com/invite/gmvS9NEuEn" >ᴅɪꜱᴄᴏʀᴅ</a>
@@ -89,23 +90,56 @@ This is only public for github pages.-->
         <br>
         <br>
         <br>
-        <div Id="versions">
-            <br>
-            <br>
-            <center>
-                <h1>Versions and Mod loaders</h1>
-                <p>Moon Client will support Fabric and Forge with Minecraft versions 1.8.9 and latest versions of the game</p>
-            </center>
-        </div>
-        <div Id="downloads">
-            <br>
-            <center>
-                <h1>Downloads</h1>
-                <br>
-                <p>The client is not available for download, stay tuned!</p>
+        <br>
+        <div class="bottom">
+            <div Id="versions">
                 <br>
                 <br>
-            </center>
+                <center>
+                    <h1>Versions and Mod loaders</h1>
+                    <p>Moon Client will support Fabric and Forge with Minecraft versions 1.8.9 and latest versions of the game</p>
+                </center>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div Id="downloads">
+                <br>
+                <center>
+                    <h1>Downloads</h1>
+                    <br>
+                    <p>The client is not available for download, stay tuned!</p>
+                    <br>
+                    <br>
+                </center>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div id="meteorPlus">
+                <br>
+                <br>
+                <center>
+                    <div class="meteorContainer">
+                        <img src="meteorPlus.png" width="100" height="100" style="border-radius: 10px;">
+                        <h1 class="meteorTitle">Meteor+</h1>
+                    </div>
+                    <br>
+                    <br>
+                    <p>Meteor+ is a subscription with in-game perks that include:</p>
+                    <p>- Meteor rank in discord</p>
+                    <p>- Blue icon with green +</p>
+                    <p>- Upload 5 of your own cloaks</p>
+                    <p>- 1 free emote every month</p>
+                    <p>- 1 free cosmetic every month</p>
+                    <p>- 10% of the store</p>
+                    <p>- Access to the private chats with the other Meteor+ subscribers</p>
+                </center>
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
         </div>
     </body>
 </html>
