Added the Meteor+ cost

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ This is only public for github pages.-->
                     <p>- 1 free cosmetic every month</p>
                     <p>- 10% of the store</p>
                     <p>- Access to the private chats with the other Meteor+ subscribers</p>
+                    <h3>All for $5.99 a month</h3>
                 </center>
             </div>
             <br>
