Fixed a type/gammar

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <br>
         <br>
         <div class="description" id="description">
-            <p>Moon Client will be a customizable client/launcher for old, and the latest versions of Minecraft Java. We will be working on the vanilla version of the game, then we'll create a Fabric/Forge version of the client. You will be able to add your own mods to the game (that are from the launcher). We are looking for more developers. If you're interested please join the discord and create a ticket</p>
+            <p>Moon Client will be a customizable client/launcher for old, and the latest versions of Minecraft Java. We will be working on the vanilla version of the game, then we'll create a Fabric/Forge version of the client. You will be able to add your own mods to the game (that are from the launcher). Therefore, we are looking for more developers. If you're interested please join the discord and create a ticket</p>
         </div>
     </div>
     <script src="script.js"></script>
