Fixed a type/gammar

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </div>
     </div>
     <div class="descriptions">
-        <p>Improve your Minecraft gameplay with by boosting your FPS</p>
-        <p>Add built in mods into your game for a better experince</p>
+        <p>Improve your Minecraft gameplay by boosting your FPS</p>
+        <p>Add built in mods from the launcher into your game for a better experince</p>
     </div>
     <br>
     <br>
