--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.7.2/css/all.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -21,6 +21,7 @@
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#description">About</a></li>
                 <li><a href="#features">Features</a></li>
+                <li><a href="terms.html">Terms</a></li>
                 <li><a href="https://discord.com/invite/gmvS9NEuEn">Discord</a></li>
             </ul>
         </nav>
@@ -43,8 +44,8 @@
         </div>
     </div>
     <div class="descriptions">
-        <p>Improve your Minecraft gameplay by boosting your FPS</p>
-        <p>Add built in mods from the launcher into your game for a better experince</p>
+        <p>Improve your Minecraft gameplay with by boosting your FPS</p>
+        <p>Add built in mods into your game for a better experince</p>
     </div>
     <br>
     <br>
@@ -55,7 +56,7 @@
         <br>
         <br>
         <div class="description" id="description">
-            <p>Moon Client will be a customizable client/launcher for old, and the latest versions of Minecraft Java. We will be working on the vanilla version of the game, then we'll create a Fabric/Forge version of the client. You will be able to add your own mods to the game (that are from the launcher). Therefore, we are looking for more developers. If you're interested please join the discord and create a ticket</p>
+            <p>Moon Client will be a customizable client/launcher for old, and the latest versions of Minecraft Java. We will be working on the vanilla version of the game, then we'll create a Fabric/Forge version of the client. You will be able to add your own mods to the game (that are from the launcher). We are looking for more developers. If you're interested please join the discord and create a ticket</p>
         </div>
     </div>
     <script src="script.js"></script>
