Had to add 2 periods..

--- a/terms.html
+++ b/terms.html
@@ -34,8 +34,8 @@
         <h1>TERMS</h1>
         <br>
         <p>Last updated: May 22nd, 2025</p>
-        <p>Please read the terms of use carefully</p>
-        <p>We will notify everyone on the discord when the terms get updated. Any changes will be in effect automatically</p>
+        <p>Please read the terms of use carefully.</p>
+        <p>We will notify everyone on the discord when the terms get updated. Any changes will be in effect automatically.</p>
         <br>
         <br>
         <br>
@@ -55,7 +55,7 @@
         <br>
         <br>
         <h2>Bugs / Exploits</h2>
-        <p>Any bugs or exploits that are found, please report it to us. If you abuse our product there will be consiquences</p>
+        <p>Any bugs or exploits that are found, please report it to us. If you abuse our product there will be consiquences.</p>
     </div>
 </body>
 </html>
